fix findbug